# mpi-bindings

./: CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  main.impala  mpi.c  mpi.cpp  mpi.impala  util.cpp  util.impala
